@@ -1229,6 +1229,7 @@
         define_variable(S(print_right_margin),NIL);     # *PRINT-RIGHT-MARGIN* := NIL
         define_variable(S(print_rpars),NIL);            # *PRINT-RPARS* := NIL
         define_variable(S(print_indent_lists),fixnum(1)); # *PRINT-INDENT-LISTS* := 1
+        define_variable(S(print_pretty_fill),NIL);      # *PRINT-PRETTY-FILL* := NIL
         define_variable(S(print_circle_table),unbound); # SYS::*PRINT-CIRCLE-TABLE*
         define_variable(S(prin_level),unbound);         # SYS::*PRIN-LEVEL*
         define_variable(S(prin_lines),unbound);         # SYS::*PRIN-LINES*
